# WordOps

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  SECURITY.md  backup  gitconfig.py  install  requirements-dev-py3.txt  requirements.txt  setup.cfg  setup.py  smtp-cli.pl  snapcraft.yaml  wo.sh
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: blank.yml  main.yml  pypi.yml  stale.yml
config/: wo.conf
config/bash_completion.d/: wo_auto.rc
config/plugins.d/: clean.conf  debug.conf  import_slow_log.conf  info.conf  log.conf  maintenance.conf  secure.conf  site.conf  stack.conf  update.conf
docs/: wo.8
tests/: init-file  issue.sh  travis.sh
tests/cli/: 13_test_stack.py  13_test_stack_install.py  14_test_stack_services_stop.py  15_test_stack_services_start.py  16_test_stack_services_restart.py  17_test_stack_services_status.py  18_test_site_create.py  19_test_site_disable.py  20_test_site_enable.py  21_test_site_info.py  22_test_site_list.py  23_test_site_show.py  24_test_site_update.py  25_test_clean.py  26_test_debug.py  27_test_info.py  28_test_secure.py  29_test_site_delete.py  2_test_stack_services_start.py  30_test_stack_remove.py  31_test_stack_purge.py  3_test_stack_services_status.py  4_test_stack_services_stop.py  5_test_stack_services_restart.py  8_test_site_create.py  91_test_site_info.py  93_test_site_list.py  (+11 more)
(+120 files in other folders)
